Replace AInspector Sidebar with AInspector WCAG

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -129,8 +129,8 @@
         <a href="https://chrome.google.com/webstore/detail/arc-toolkit/chdkkkccnlfncngelccgbgfmjebmkmce"><abbr>ARC</abbr> Toolkit in the Google Chrome Store</a>.
       </li>
       <li>The
-        <a href="https://addons.mozilla.org/en-US/firefox/addon/ainspector-sidebar/">AInspector Sidebar</a>
-        <!--Mozilla Public License, version 2.0-->
+        <a href="https://addons.mozilla.org/en-US/firefox/addon/ainspector-wcag/">AInspector <abbr>WCAG</abbr></a>
+        <!--Mozilla Public License, version 2.0; formerly https://addons.mozilla.org/en-US/firefox/addon/ainspector-sidebar/-->
         is a Firefox add-on developed by the Accessible <abbr>IT</abbr> Group at the University of Illinois.
         Like <abbr>FAE</abbr> it evaluates the conformance of web content
         against <abbr>WCAG</abbr> 2.0 Level A or Level AA.
@@ -196,7 +196,7 @@
       <li><a href="http://hiis.isti.cnr.it:8880/MauveWeb/"><abbr>MAUVE</abbr>: Multiguideline Accessibility and Usability Validation Environment</a>.
       </li>
       <li>Addy Osmani and Matt Gaunt:
-        <a href="https://www.youtube.com/watch?v=pBJZsp5LsOE">Totally Tooling Tips: Accessibility</a>:
+        <a href="https://www.youtube.com/watch?v=pBJZsp5LsOE">Totally Tooling Tips: Accessibility</a>:<!--@@recheck link, Nov 2020-->
         short YouTube video (8 minutes) that introduces a few tools, <abbr>i.e.</abbr> 
         the <a href="https://chrome.google.com/webstore/detail/accessibility-developer-t/fpkknkljclfencbdbgkenhalefipecmb?hl=en">Chrome Accessibility Developer Tools Extension</a>,
         the <a href="https://github.com/GoogleChrome/accessibility-developer-tools">Accessibility Developer Tools</a> (a Node module available on GitHub),
@@ -220,7 +220,7 @@
         See also:
         <ul>
           <li>Dodson, Rob:
-            <a href="https://www.youtube.com/watch?v=jC_7NnRdYb0">Automated testing with aXe -- A11ycasts #15</a>
+            <a href="https://www.youtube.com/watch?v=jC_7NnRdYb0">Automated testing with aXe -- A11ycasts #15</a><!--@@recheck link, Nov 2020-->
             (<i class="ytchannel">Google Chrome Developers</i> on YouTube, 12 minutes, 17.03.2017).<!--CC-BY licence-->
             <br />Note that this tutorial is based on an older version of axe.
           </li>
@@ -512,10 +512,10 @@
         can upload images and see what they look like through eight different
         simulations of colour blindness.
       </li>
-      <li><a href="http://registry.gimp.org/node/24885" lang="en-US">Color Vision Deficiency</a>
+      <li><del datetime="2020-11-08"><a href="http://registry.gimp.org/node/24885" lang="en-US">Color Vision Deficiency</a>
         is a 
         <a href="http://www.gimp.org/"><abbr title="GNU Image Manipulation Program">GIMP</abbr></a> 
-        plugin that simulates different colour vision deficiencies. 
+        plugin that simulates different colour vision deficiencies.</del>
       </li>
       <li>Bracey, Kezz:
         <a href="https://webdesign.tutsplus.com/articles/how-to-use-the-contrast-checker-in-chrome-devtools--cms-31504">How to Use the Contrast Checker in Chrome DevTools</a>,
@@ -564,7 +564,7 @@
     <h2 id="ua_extensiondev">Developing Browser Extensions</h2>
     <ul>
       <li>
-        <a href="https://www.youtube.com/watch?v=6dfrfRl6il8">Google Chrome Extensions and Accessibility</a>
+        <a href="https://www.youtube.com/watch?v=6dfrfRl6il8">Google Chrome Extensions and Accessibility</a><!--@@recheck link, Nov 2020-->
         is a short video by Rachel Shearer (from Google's accessibility team) 
         discusses accessibility best practices for extension developers.
         In the first part, she describes the 
@@ -641,7 +641,7 @@
             <a href="https://www.bostonwebdesigners.net/news/lighthouse-accessibility-audit-tool/">Will the Lighthouse accessibility audit tool help make the web more accessible?</a>,
             <i class="website">Boston Web Designers</i>, 22.11.2017.
           </li>
-          <!--Not about Lighthouse:
+          <!--Not about Lighthouse @@recheck:
           <li>
             <a href="https://www.youtube.com/watch?v=56zCnwj58e4">Accessibility Testing - Totally Tooling Tips</a>
             (<i class="ytchannel">Google Chrome Developers</i> on YouTube, 7 minutes, 03.11.2017).
@@ -720,7 +720,7 @@
   -->
   <!-- Tools for web developers: 
     * yatil / Eric Eggert: accessifyhtml5.js, polyfill for a more accessible HTML5: https://github.com/yatil/accessifyhtml5.js
-      Last updated in 2015.
+      Last updated in 2015; archived.
   -->
   <!-- 
     * The A11Y Project: "A community-driven effort to make web accessibility easier.": http://a11yproject.com/
