Fix validation error

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -387,7 +387,7 @@
       </li>
       <li><span lang="fr">Vasseur, Cédric:
         <a href="http://handisol.beepmaster.com/creer-sous-titrage.php" hreflang="fr">Sous-titrer une vidéo</a>,
-        <i class="website">handisol.beepmaster.com</i>, 27.09.2010, updated several times.
+        <i class="website">handisol.beepmaster.com</i></span>, 27.09.2010, updated several times.
         This document covers both technical steps and, to a lesser extent, subtitle formatting and content.
       </li>
     </ul>
