Fix character entity reference

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2188,7 +2188,7 @@
           <i class="blog">Adrian Roselli's blog</i>, 10.12.2017. 
           (This post builds on Steve Faulkner's post about <code>&lt;mark&gt;</code>.
           For the <code>del</code> element, see also
-          <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/del">&ld;del&gt;: The Deleted Text element</a>
+          <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/del">&lt;del&gt;: The Deleted Text element</a>
           on <abbr>MDN</abbr> Web Docs.)
         </li>
         <li>Göransson, Daniel:
