Fix validation errors

--- a/elearning.html
+++ b/elearning.html
@@ -88,9 +88,9 @@
         by identifying and validating best practice approaches; to promote increased use of the 
         best practice resources identified by raising awareness of the resources and 
         presenting them in one central online portal or observatory.</q></del>
-        <ins datetime="2020-05-12">The
+        <ins datetime="2020-05-12">May 2020: The
         <a href="https://www.easpd.eu/en/content/aldo">ALDO project's</a>
-        website is no longer online.
+        website is no longer online.</ins>
       </li>
       <li><a href="http://www.aemanet.eu/en"><abbr>AEMA</abbr></a>:
         Adult Education Made Easy.<br />
