Fix validation error

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -75,7 +75,7 @@
             <br />This site allows developers to filter the techniques based on the conformance level and the technologies that apply to the content they are creating.
           </li>
         </ul>
-        <br />Articles and blog posts:</li>
+        <br />Articles and blog posts:
         <ul>
           <li>Onsman, Ricky:
             <a href="http://intopia.digital/articles/whats-new-in-wcag-2-1/">What’s new in <abbr>WCAG</abbr> 2.1?</a>,
