Add: Accessibility for Ontarians with Disabilities Act

--- a/social-legal.html
+++ b/social-legal.html
@@ -317,6 +317,10 @@
         <i class="website">Disability Rights Advocates</i>, 14.04.2016.
         <br />As a consequence of this settlement, Netflix will provide audio description for much of its content.
       </li>
+      <li>
+        <a href="https://www.aoda.ca/the-act/">Accessibility for Ontarians with Disabilities Act</a>.
+        <!--Referrer: https://twitter.com/bitvtest/status/1326463428962213888 -->
+      </li>
     </ul>
 
     <p>Voluntary Product Accessibility Template (<abbr>VPAT</abbr>):</p>
