Remove ampersand from URL

--- a/social-legal.html
+++ b/social-legal.html
@@ -125,7 +125,7 @@
         <!--@@PDF-->
       </li>
       <li>
-        <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.L_.2019.151.01.0070.01.ENG&toc=OJ:L:2019:151:TOC">Directive (<abbr>EU</abbr>) 2019/882
+        <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.L_.2019.151.01.0070.01.ENG">Directive (<abbr>EU</abbr>) 2019/882
         of the European Parliament and of the Council of 17 April 2019 on the accessibility requirements for products and services (Text with <abbr>EEA</abbr> relevance)</a>,
         <i class="website">EUR-Lex</i>, 07.06.2019.
       </li>
