Add main point as summary of 'placeholder - the piss-take label'

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -781,6 +781,9 @@
         <li>Faulkner, Steve:
           <a href="https://codepen.io/stevef/post/placeholder-the-piss-take-label">placeholder - the piss-take label</a>,
           <i class="website">CodePen</i>, last updated 23.05.2019.
+          <br />Using the <a href="https://www.w3.org/TR/html52/sec-forms.html#the-placeholder-attribute"><code>placeholder</code> attribute</a>
+          as the only visible label for a control that requires user input fails
+          <a href="https://www.w3.org/TR/WCAG21/#labels-or-instructions">Success Criterion 3.3.2 Labels or Instructions</a>.
         </li>
         <li>
           <a href="https://www.w3.org/WAI/GL/low-vision-a11y-tf/wiki/Placeholder_Research">Placeholder Research</a>,
