Add: WAI: Audio Description of Visual Information

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -580,6 +580,10 @@
         <a href="http://www.mediaaccess.org.au/web/how-to-audio-describe-a-youtube-video">How to Audio Describe a YouTube Video</a>:
         short instructions for using YouDescribe.
       </li>
+      <li>
+        <a href="https://www.w3.org/WAI/media/av/description/">Audio Description of Visual Information</a>,
+        <i class="website">Web Accessibility Initiative (<abbr>WAI</abbr>), <abbr>W3C</abbr></i> (no date).
+      </li>
       <li>Rodas, Julia Miele:
         <a href="https://jitp.commons.gc.cuny.edu/youdescribe-testing-crowd-sourced-video-description-for-service-learning-at-the-city-university-of-new-york/">YouDescribe: Testing Crowd-sourced Video Description for Service Learning at the City University of New York</a>,
         <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
