Add: MDN: captions etc.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -390,6 +390,10 @@
         <i class="website">handisol.beepmaster.com</i></span>, 27.09.2010, updated several times.
         This document covers both technical steps and, to a lesser extent, subtitle formatting and content.
       </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/Audio_and_video_delivery/Adding_captions_and_subtitles_to_HTML5_video">Adding captions and subtitles to <abbr>HTML</abbr>5 video</a>,
+        <i class="website"><abbr>MDN</abbr> Developer guides</i> (no date).
+      </li>
     </ul>
 
     <h3 id="captioning-tools">Tools for Captioning / Subtitles for the Hard of Hearing</h3>
@@ -572,22 +576,13 @@
         https://www.futurelearn.com/courses/digital-accessibility/1/comments/17624800
     -->
     <ul>
-      <li><a class="gz-hci" href="https://youdescribe.org/">YouDescribe</a>:
-        a free online tool for adding audio description to YouTube videos.
-        As of 2020, you can only log in to YouDescribe with Google.
-      </li>
-      <li>Media Access Australia:
-        <a href="http://www.mediaaccess.org.au/web/how-to-audio-describe-a-youtube-video">How to Audio Describe a YouTube Video</a>:
-        short instructions for using YouDescribe.
-      </li>
       <li>
         <a href="https://www.w3.org/WAI/media/av/description/">Audio Description of Visual Information</a>,
         <i class="website">Web Accessibility Initiative (<abbr>WAI</abbr>), <abbr>W3C</abbr></i> (no date).
       </li>
-      <li>Rodas, Julia Miele:
-        <a href="https://jitp.commons.gc.cuny.edu/youdescribe-testing-crowd-sourced-video-description-for-service-learning-at-the-city-university-of-new-york/">YouDescribe: Testing Crowd-sourced Video Description for Service Learning at the City University of New York</a>,
-        <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
-        <!--@@todo read! -->
+      <li>
+        <a href="https://accessibility.colostate.edu/audio-description/">Audio Description</a>,
+        <i class="website">Accessibility by Design, Colorado State University</i> (no date).
       </li>
       <li>Amboy, Dayna:
         <a href="https://www.techsmith.com/blog/audio-descriptions-course-videos-accessible/">Why You Need Audio Descriptions to Make Online Course Videos Accessible</a>,
@@ -598,12 +593,25 @@
         <i class="blog">3Play Media Blog</i>, 18.01.2019, updated on 24.02.2020.
         <br />This blog post discusses Brightcove, Vidyard, Ooyala, Kaltura, Able Player, OzPlayer and Wistia.
       </li>
+      <li><a class="gz-hci" href="https://youdescribe.org/">YouDescribe</a>:
+        a free online tool for adding audio description to YouTube videos.
+        As of 2020, you can only log in to YouDescribe with Google.
+      </li>
+      <li>Media Access Australia:
+        <a href="http://www.mediaaccess.org.au/web/how-to-audio-describe-a-youtube-video">How to Audio Describe a YouTube Video</a>:
+        short instructions for using YouDescribe.
+      </li>
+      <li>Rodas, Julia Miele:
+        <a href="https://jitp.commons.gc.cuny.edu/youdescribe-testing-crowd-sourced-video-description-for-service-learning-at-the-city-university-of-new-york/">YouDescribe: Testing Crowd-sourced Video Description for Service Learning at the City University of New York</a>,
+        <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
+        <!--@@todo read! -->
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=EKGOWavFvHc">We're The Superhumans | Rio Paralympics 2016 Trailer</a>:
         audio-described video by Channel 4. (Captions can also be activated.
         There is also a <a href="https://www.youtube.com/watch?v=IocLkk3aYlk">version without audio description</a>.)
       </li>
-      <!-- Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
+      <!--Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
         Advisory technique H96: Using the track element to provide audio descriptions: https://www.w3.org/WAI/WCAG21/Techniques/html/H96 & https://www.w3.org/WAI/GL/wiki/Using_the_track_element_to_provide_audio_descriptions
       -->
     </ul>
