Glossar (Barrierefreies Webdesign); Accessibility glossary

--- a/terminology.html
+++ b/terminology.html
@@ -253,6 +253,14 @@
         for the course
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a> (2016-2017).
       </li>
+      <li><span lang="de">
+        <a href="https://www.barrierefreies-webdesign.de/glossar/index.html" hreflang="de">Glossar</a>,
+        <i class="website">Barrierefreies Webdesign</i></span> (no date).
+      </li>
+      <li>
+        <a href="https://www.btb.termiumplus.gc.ca/publications/accessibilite-accessibility-eng.html">Accessibility glossary</a>,
+        <i class="website">Canada.ca</i> (no date).
+      </li>
       <li>Usability.gov (<abbr>USA</abbr>):
         <a href="https://www.usability.gov/what-and-why/glossary/a/index.html">Glossary</a>
         by the <abbr>U.S.</abbr> Department of Health &amp; Human Services.
