Add: h2: Resources That Cover Both Captioning and Audio Description

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -380,6 +380,10 @@
       <li><abbr>BBC</abbr>:
         <a href="https://bbc.github.io/subtitle-guidelines/"><abbr>BBC</abbr> Subtitle Guidelines</a>.
       </li>
+      <li><span lang="de">
+        <a href="https://www.daserste.de/service/kontakt-und-service/barrierefreiheit-im-ersten/untertitel-standards/index.html" hreflang="de">Untertitel-Standards</a>,
+        <i class="website">Das Erste</i></span> (first published in April 2015).
+      </li>
       <li>
         <a href="http://www.untertitelrichtlinien.de/" hreflang="de" lang="de">Gemeinsame Untertitelrichtlinien für den deutschen Sprachraum</a>:
         guidelines defined by several associations that represent people with hearing impairments.
@@ -389,10 +393,6 @@
         <a href="http://handisol.beepmaster.com/creer-sous-titrage.php" hreflang="fr">Sous-titrer une vidéo</a>,
         <i class="website">handisol.beepmaster.com</i></span>, 27.09.2010, updated several times.
         This document covers both technical steps and, to a lesser extent, subtitle formatting and content.
-      </li>
-      <li>
-        <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/Audio_and_video_delivery/Adding_captions_and_subtitles_to_HTML5_video">Adding captions and subtitles to <abbr>HTML</abbr>5 video</a>,
-        <i class="website"><abbr>MDN</abbr> Developer guides</i> (no date).
       </li>
     </ul>
 
@@ -510,6 +510,12 @@
         (<i class="website">Carmen Wiki, Office of Distance Education and eLearning, Ohio State University</i>).</del>
         (The CarmenWiki was decommissioned on 31.01.2019.)
       </li>
+      <!--Essentially advises to use Amberscript's speech recognition solution:
+      <li><span lang="de">Behrens, Timo:
+        <a href="https://www.amberscript.com/de/blog/automatische-untertitel" hreflang="de">Wie erstelle ich automatische Untertitel?</a>,
+        <i class="blog">Amberscript blog</i>, 08.02.2019.
+      </li>
+      -->
       <li><del datetime="2020-11-08">
         <a href="https://carmenwiki.osu.edu/display/10292/DIY+Captioning+Techniques"><abbr title="Do-it-yourself">DIY</abbr> Captioning Techniques</a>
         (<i class="website">Carmen Wiki, Office of Distance Education and eLearning, Ohio State University</i>).</del>
@@ -614,6 +620,19 @@
       <!--Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
         Advisory technique H96: Using the track element to provide audio descriptions: https://www.w3.org/WAI/WCAG21/Techniques/html/H96 & https://www.w3.org/WAI/GL/wiki/Using_the_track_element_to_provide_audio_descriptions
       -->
+    </ul>
+
+    <h3>Resources That Cover Both Captioning and Audio Description</h3>
+    <ul>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/Audio_and_video_delivery/Adding_captions_and_subtitles_to_HTML5_video">Adding captions and subtitles to <abbr>HTML</abbr>5 video</a>,
+        <i class="website"><abbr>MDN</abbr> Developer guides</i> (no date).
+      </li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/Accessibility/Multimedia">Accessible Multimedia</a>,
+        <i class="website">Learn Web Development, <abbr>MDN</abbr></i> (no date).
+        <!--points out that a browser's default controls for video are not alwasy accessible-->
+      </li>
     </ul>
 
     <h3 id="media-player">Video or Audio Players</h3>
