Add: 3Play: How to Add Closed Captions and Audio Description to OzPlayer; UWashington: Creating Accessible Videos

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -633,6 +633,14 @@
         <i class="website">Learn Web Development, <abbr>MDN</abbr></i> (no date).
         <!--points out that a browser's default controls for video are not alwasy accessible-->
       </li>
+      <li>
+        <a href="https://www.3playmedia.com/learn/how-to-guides/ozplayer/">How to Add Closed Captions and Audio Description to OzPlayer</a>,
+        <i class="website">3Play Media</i> (no date).
+      </li>
+      <li>
+        <a href="https://www.washington.edu/accessibility/videos/">Creating Accessible Videos</a>,
+        <i class="website">University of Washington<i> (no date).
+      </li>
     </ul>
 
     <h3 id="media-player">Video or Audio Players</h3>
