Escape ampersands in URLs

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1667,7 +1667,7 @@
         <li>
           <a href="https://www.opendyslexic.org/">OpenDyslexic</a>:
           this font face is free to use; it uses the 
-          <a href="http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL">SIL-Open Font License (<abbr>OFL</abbr>)</a>.
+          <a href="http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&amp;id=OFL">SIL-Open Font License (<abbr>OFL</abbr>)</a>.
         </li>
         <li>
           <a href="http://www.k-type.com/fonts/lexie-readable/">Lexie Readable</a>,
@@ -2359,8 +2359,7 @@
     href="https://github.com/cstrobbe"
     rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
     xml:lang="en-US" lang="en-US" rel="license"
-    href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
-    Attribution-ShareAlike 4.0 International License</a>.</p>
+    href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
   </footer>
 </body>
 </html>
