Add: Wild: CAPTCHA: Inaccessible to Everyone

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1015,8 +1015,22 @@
           at the University of Washington (Seattle),
           <q>sighted users have less than 50% success rate for the most common Audio CAPTCHAs</q>.)
         </li>
+        <li>Wild, Gian:
+          <a href="http://www.sitepoint.com/captcha-inaccessible-to-everyone/"><abbr>CAPTCHA</abbr>: Inaccessible to Everyone</a>,
+          <i class="website">Sitepoint</i>, 07.02.2013.
+        </li>
       </ul>
-
+      <!--CAPTCHA:
+        * CAPTCHA: How to do it right (ie. don't use CAPTCHA!): http://www.linkedin.com/pulse/20140831232143-25659818-captcha-how-to-do-it-right-ie-don-t-use-captcha
+        * No longer available: Accessibility of Google's reCAPTCHA v2 : http://anysurfer.be/nl/blog/detail/googles-recaptcha-v2
+          See Gijs Veyfeyken's message to WAI-IG, 02.02.2017. + Chaals's message on 03.02.2017.
+          + Google's reCAPTCHA apparently also affects users who use browser settings for privacy (enable "do not track", disable 3rd party cookies, clearing cookies, ad blockers, privacy badger, etc.). (See Adam Powell's message, 03.02.2017)
+        * http://webaim.org/blog/spam_free_accessible_forms/ opens in a new window
+        * http://www.karlgroves.com/2012/04/03/captcha-less-security/ opens in a new window
+        * http://evengrounds.com/developers/alternatives-to-captcha opens in a new window
+        * http://timkadlec.com/2011/01/alternatives-to-captcha/ opens in a new window
+        * http://www.scientificamerican.com/article.cfm?id=pogue-8-alternatives-to-hated-captcha opens in a new window
+      -->
       <h3 id="captcha-access">Accessible <abbr>CAPTCHA</abbr>s and <abbr>CAPTCHA</abbr> Alternatives</h3>
       <ul>
         <li>Marion, Frank:
