Fix validation error

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -639,7 +639,7 @@
       </li>
       <li>
         <a href="https://www.washington.edu/accessibility/videos/">Creating Accessible Videos</a>,
-        <i class="website">University of Washington<i> (no date).
+        <i class="website">University of Washington</i> (no date).
       </li>
     </ul>
 
