Add: Weckenmann: Barrierefreie Kontraste

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1090,6 +1090,10 @@
           <i class="website">CANAXESS</i>, 13.09.2020.
           <!--Referrer: @stommepoes on Twitter, 06.10.2020: https://twitter.com/stommepoes/status/1313386892147265536 -->
         </li>
+        <li><span lang="de">Weckenmann, Sonja:
+          <a href="https://tollwerk.de/projekte/tipps-techniken-inklusiv-barrierefrei/barrierefreie-kontraste" hreflang="de">Barrierefreie Kontraste</a>,
+          <i class="website">Tollwerk</i></span>, 17.11.2020.
+        </li>
       </ul>
     </section>
 
