Updates on W3C guidelines; add ARIA in HTML, HTML Accessiblity API Mappings

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -332,8 +332,8 @@
         <a href="https://www.w3.org/TR/wai-aria-1.1/">Accessible Rich Internet Applications (<abbr>WAI-ARIA</abbr>) 1.1 &mdash; <abbr>W3C</abbr> Recommendation 14 December 2017</a>.
       </li>
       <li><abbr>W3C</abbr>:
-        <a href="http://www.w3.org/TR/wai-aria/">Accessible Rich Internet Applications (<abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr>) 1.0</a>:
-        specification of an ontology of roles, states and properties that can be
+        <a href="https://www.w3.org/TR/wai-aria-1.0/">Accessible Rich Internet Applications (<abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr>) 1.0</a>:
+        this was the first official version of a specification of an ontology of roles, states and properties that can be
         used to improve the accessibility of web applications.<br />
         This document is part of a suite of documents. The best starting point
         is the <a href="http://www.w3.org/WAI/intro/aria.php"><abbr>WAI-ARIA</abbr>
@@ -346,8 +346,26 @@
             An introduction to rich Internet application accessibility challenges and solutions</a>.
           </li>
           <li>
-            <a href="http://www.w3.org/TR/wai-aria-practices/"><abbr>WAI-ARIA</abbr> 1.0 Authoring Practices:
-            An author's guide to understanding and implementing Accessible Rich Internet Applications</a>.
+            <a href="http://www.w3.org/TR/wai-aria-practices/"><abbr>WAI-ARIA</abbr> Authoring Practices 1.1</a>:
+            this Working Group Note provides guidance on several aspects of creating accessible rich internet applications:
+            design patterns and widgets, landmark regions, accessible names and descriptions, developing a keyboard interface,
+            grid and table properties, hiding semantics using the <code>presentation</code> role, and role that hide other semantics.
+            (version 1.0 was subtitled &ldquo;An author's guide to understanding and implementing Accessible Rich Internet Applications&rdquo;.)
+          </li>
+          <li>
+            <a href="https://www.w3.org/TR/html-aria/"><abbr>ARIA</abbr> in <abbr>HTML</abbr></a>.
+          </li>
+          <li>
+            <a href="https://www.w3.org/TR/html-aam/"><abbr>HTML</abbr>Accessibility <abbr>API</abbr> Mappings 1.0</a>:
+            <q cite="https://www.w3.org/TR/2020/WD-html-aam-1.0-20200817/#intro">This specification defines how <abbr title="Hypertext Markup Language">HTML</abbr> user agents respond to and expose
+            <a href="https://www.w3.org/TR/2020/WD-html-aam-1.0-20200817/#dfn-role" data-link-type="dfn">role</a>,
+            <a href="https://www.w3.org/TR/2020/WD-html-aam-1.0-20200817/#dfn-state" data-link-type="dfn">state</a> and
+            <a href="https://www.w3.org/TR/2020/WD-html-aam-1.0-20200817/#dfn-property" data-link-type="dfn">property</a> information provided for Web content.</q>
+          </li>
+          <li>
+            <a href="https://www.w3.org/TR/core-aam/">Core Accessibility <abbr>API</abbr> Mappings</a>:
+            <q cite="https://www.w3.org/TR/2017/REC-core-aam-1.1-20171214/">This document describes how user agents should expose semantics of web content languages to accessibility <abbr>APIs</abbr>.
+            This helps users with disabilities to obtain and interact with information using assistive technologies.</q>
           </li>
         </ul>
       </li>
