Add: IWAC (IAAP Nordic)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -609,10 +609,13 @@
         See also
         <a href="https://www.youtube.com/user/Zeroprojectorg">ZeroProject on YouTube</a>.
       </li>
+      <li>
+        <a href="http://www.iaapnordic.org/projekt/iwac/">The Integration of Web Accessibility Courses in <abbr>ICT</abbr> Programmes (<abbr>IWAC</abbr>)</a>.
+      </li>
       <li>Swierenga, Sara J.; Pierce, Graham L.: 
         <a href="http://uxpamagazine.org/should-we-conduct-this-usability-study/">Should We Conduct this Usability Study? Ethics Considerations in Evaluations</a>,
         <i class="magazine">User Experience</i>, November 2012.
-        <!-- @@to PDF -->
+        <!--@@to PDF-->
       </li>
     </ul>
 
@@ -1377,10 +1380,14 @@
     * The Chromium Projects: Accessibility Technical Documentation: https://www.chromium.org/developers/design-documents/accessibility
   -->
   <!--Example pages:
-    * with old-fashioned frames: "TITUS: Thesaurus Indogermanischer Text- und Sprachmaterialien": http://titus.fkidg1.uni-frankfurt.de/indexe.htm 
+    * with old-fashioned frames:
+      - "TITUS: Thesaurus Indogermanischer Text- und Sprachmaterialien": http://titus.fkidg1.uni-frankfurt.de/indexe.htm
+      - Java SE API docs: https://docs.oracle.com/javase/7/docs/api/
+      - Eclipse documentation: https://help.eclipse.org/2020-09/index.jsp
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html 
     * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
     * animated background: https://psychoslinux.gitlab.io/
+    * marquee: https://www.bundesregierung.de/breg-de/service/publikationen/nationaler-aktionsplan-2-0-der-bundesregierung-zur-un-behindertenrechtskonvention-un-brk--729496
   -->
   <!--@@ PowerPoint / presentations and cognitive load theory (needs separate page):
     * Andy Tharby: Using cognitive load theory to improve slideshow presentations. Durrington Research School (UK), 19.04.2018: https://researchschool.org.uk/durrington/blog/using-cognitive-load-theory-to-improve-slideshow-presentations
