--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -670,8 +670,7 @@
         <a href="https://www.nomensa.com/blog/category/accessibility">category about accessibility</a>..
       </li>
       <li>
-        <a href="https://tink.uk/">Tink</a>:
-        Léonie Watson's blog.
+        <a href="https://tink.uk/">Tink</a>: Léonie Watson's blog.
       </li>
       <li>
         <a href="http://simplyaccessible.com/articles/">Simply Accessible: Articles</a>.
