Add: Accessible Player Experiences (APX)

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -164,6 +164,10 @@
         a website with guidelines, how-to information and examples, such as
         <a href="http://blindcomputergames.com/howto/howto-self-voicing-design.html">Designing Games for Self Voicing</a>.
       </li>
+      <li>
+        <a href="https://accessible.games/accessible-player-experiences/">Accessible Game Design / Accessible Player Experiences (<abbr>APX</abbr>)</a>,
+        <i class="website">Accessible Games</i> (no date).
+      </li>
       <li>Josh Straub:
         <a href="https://dagersystem.com/all-review-list/disability-game-review-assassins-creed-origins/">Disability Game Review: Assassin’s Creed Origins</a>,
         <i class="website">Dager System</i>, 08.12.2017.
