--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1385,8 +1385,14 @@
       - Eclipse documentation: https://help.eclipse.org/2020-09/index.jsp
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html 
     * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
-    * animated background: https://psychoslinux.gitlab.io/
-    * marquee: https://www.bundesregierung.de/breg-de/service/publikationen/nationaler-aktionsplan-2-0-der-bundesregierung-zur-un-behindertenrechtskonvention-un-brk--729496
+    *(Nov 2020)  animated background: https://psychoslinux.gitlab.io/
+    * marquee:
+      - (Nov 2020) https://www.bundesregierung.de/breg-de/service/publikationen/nationaler-aktionsplan-2-0-der-bundesregierung-zur-un-behindertenrechtskonvention-un-brk--729496
+      - (02.12.2020) FinanzNachrichten.de: <div class="js-marque">: pausiert bei hover (kein Tastaturfokus?): https://www.finanznachrichten.de/nachrichten-2020-11/51366215-belgien-kritisiert-deutsche-corona-weihnachtsregeln-016.htm
+      - (02.12.2020) https://businessam.be/belgie-start-op-5-januari-met-vaccineren-3/
+    * Pressing pagedown button takes you to the next article instead of scrolling down (02.12.2020): https://www.euronews.com/2020/12/01/us-attorney-general-william-barr-says-no-widespread-election-fraud-disputing-trump
+    * low contrast (grey on white, green on white) (02.12.2020): https://www.gesuendernet.de/gesundheit/gesunde-ernaehrung/item/1443-tee-gesundheit-aus-der-tasse.html
+    * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
   -->
   <!--@@ PowerPoint / presentations and cognitive load theory (needs separate page):
     * Andy Tharby: Using cognitive load theory to improve slideshow presentations. Durrington Research School (UK), 19.04.2018: https://researchschool.org.uk/durrington/blog/using-cognitive-load-theory-to-improve-slideshow-presentations
