Add: APCA Contrast Calculator, Color Vision Deficiency Simulator

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -521,6 +521,16 @@
         <a href="https://webdesign.tutsplus.com/articles/how-to-use-the-contrast-checker-in-chrome-devtools--cms-31504">How to Use the Contrast Checker in Chrome DevTools</a>,
         <i class="website">Envato Tuts+</i>, 22.10.2018.
       </li>
+      <li>
+        <a href="https://www.myndex.com/APCA/"><abbr>APCA</abbr> Contrast Calculator</a>:
+        developed by Andrew Somers of Myndex. See also the
+        <a href="https://github.com/Myndex/SAPC-APCA">GitHub repository for the <abbr>APCA</abbr> Contrast Calculator</a>.
+        <!--Referrer (30.11.2020): https://twitter.com/HenriHelvetica/status/1333303650794528768 -->
+      </li>
+      <li>
+        <a href="https://www.myndex.com/CVD/">Myndex&trade; Color Vision Deficiency Simulator</a>:
+        developed by Andrew Somers of Myndex.
+      </li>
     </ul>
 
     <h2>Articles about Automated Accessibility Evaluation</h2>
