Add: Putland: Embedded YouTube and Google Maps

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -599,6 +599,10 @@
         <i class="blog">3Play Media Blog</i>, 18.01.2019, updated on 24.02.2020.
         <br />This blog post discusses Brightcove, Vidyard, Ooyala, Kaltura, Able Player, OzPlayer and Wistia.
       </li>
+      <li>
+        <a href="https://www.visionaustralia.org/community/news/2019-08-23/wcag-confusion-around-audio-description-0"><abbr>WCAG</abbr> confusion around audio description</a>,
+        <i class="website">Vision Australia</i>, 30.07.2019.
+      </li>
       <li><a class="gz-hci" href="https://youdescribe.org/">YouDescribe</a>:
         a free online tool for adding audio description to YouTube videos.
         As of 2020, you can only log in to YouDescribe with Google.
@@ -733,13 +737,6 @@
       </li>
     </ul>
     <!--
-    <ul>
-      <li>
-        <a href=""></a>
-      </li>
-    </ul>
-    -->
-    <!--
       * Project Naptha: http://projectnaptha.com/ : OCR in the browser, using Tesseract
       * Tesseract: Open Source OCR Engine: https://github.com/tesseract-ocr/tesseract (Licence: Apache 2.0; plus other liberal licence for Leptonica).
     -->
@@ -813,11 +810,6 @@
         <a href="http://www.makeuseof.com/tag/writing-reader-friendly-check-8-readability-testing-web-tools/">8 Readability Web Tools to Test Your Writing Quality</a>,
         <i class="website">MakeUseOf</i>, 10 March 2010.
       </li>
-      <!--
-      <li>:
-        <a href=""></a>
-      </li>
-      -->
       <li>
         <a href="http://splasho.com/upgoer5/">The Up-Goer Five Text Editor</a>:
         web-based tool where you can enter text and check whether it uses only 
@@ -882,6 +874,10 @@
 
     <h2>Other Links</h2>
     <ul>
+      <li>Putland, Matthew:
+        <a href="https://www.visionaustralia.org/services/digital-access/blog/embedded-youtube-and-google-maps">Embedded YouTube and Google Maps – are they accessible?</a>,
+        <i class="website">Vision Australia</i>, 01.05.2020.
+      </li>
       <li>
         <a href="https://support.office.com/en-us/article/make-your-outlook-email-accessible-71ce71f4-7b15-4b7a-a2e3-cf91721bbacb">Make your Outlook email accessible</a>,
         <i class="website">Microsoft: Office Support</i> (no date).
@@ -940,6 +936,14 @@
       </li>
     </ul>
 
+    <!--
+    <h2></h2>
+    <ul>
+      <li>
+        <a href=""></a>
+      </li>
+    </ul>
+    -->
   </main>
 
   <footer>
