Move Steve Lee's article to Linux page

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -472,6 +472,11 @@
         <a href="http://www.eklhad.net/philosophy.html">Command Line Programs for the Blind</a>
         (no date, possibly updated in 2016).
       </li>
+      <li>Lee, Steve: 
+        <a href="https://wiki.gnome.org/Accessibility/PythonPoweredAccessibility">Python Powered Accessibility</a>
+        (originally published in the December 2008 issue of <i class="magazine">Python Magazine</i> (now defunct)).
+        <br />This article focuses on accessibility for Gnome applicatios.
+      </li>
     </ul>
   </main>
 
