Add: ZoomText Fusion

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -179,6 +179,10 @@
         <a href="https://yourdolphin.com/product/features?pid=1">SuperNova Magnifier Features</a>.
       </li>
       <li>
+        <a href="https://www.zoomtext.com/products/zoomtext-fusion/">ZoomText Fusion</a>,
+        <i class="website">ZoomText</a> (no date). Fusion combines <abbr>JAWS</abbr> and ZoomText.
+      </li>
+      <li>
         <a href="http://gwmicro.com/"><abbr>GW</abbr> Micro</a>
         used to offer a screen reade named Window-Eyes, but development was discontinued in 2017:
         <a href="https://coolblindtech.com/breaking-window-eyes-discontinued-in-the-hands-of-the-vfo-group/">Breaking: Window-eyes discontinued, in the hands of the <abbr>VFO</abbr> Group</a> (03.05.2017).
