Add: Ward: Motor Disabilities ...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1049,6 +1049,10 @@
         <i class="blog">Microsoft Design on Medium</i>, 30.08.2018 (four-minute read).
         <br />While the blog post acknowledges diversity in users, it does not mention people with disabilities.
       </li>
+      <li>Ward, Chris:
+        <a href="https://www.telerik.com/blogs/motor-disabilities-and-what-you-need-for-accessibility">Motor Disabilities and What You Need for Accessibility</a>,
+        <i class="website">Telerik</i>, 30.07.2019.
+      </li>
       <!--@@section testing/evaluation-->
       <li>Brajnik, Giorgio:
         <a href="https://users.dimi.uniud.it/~giorgio.brajnik/projects/bw/">An accessibility evaluation method based on Barrier Walkthrough</a>.
@@ -1137,11 +1141,6 @@
         last updated in 01.03.2003.
       </li>
       <!--@@more: https://duckduckgo.com/?q=%22Accessibility+Maturity+Model%22+%22Business+Disability+Forum%22&t=ffab&ia=web -->
-      <!--
-      <li>
-        <a href=""></a>
-      </li>
-      -->
       <li>
         <a href="https://www.essentialaccessibility.com/blog/wcag-validators/"><abbr>WCAG</abbr> 2.0 Validators and Web Accessibility Remediation Solutions: What are Your Options?</a>,
         <i class="blog">Essential Accessibility</i>, 13.03.2017.
@@ -1352,7 +1351,16 @@
         <a href="https://fosdem.org/2019/schedule/track/open_source_design/">Open Source Design devroom at FOSDEM 2019</a>.
       </li>
     </ul>
-
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
   <!--Unsorted:
     * Noun Project: https://thenounproject.com/about/ 
